Fix menu to work with overflow

--- a/frontend/ScoutVenture/src/app/app.component.scss
+++ b/frontend/ScoutVenture/src/app/app.component.scss
@@ -3,5 +3,6 @@
   top: 0;
   display: flex;
   height: 100%;
+  width: 100%;
   padding: 8px;
 }
